--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,4 +1,3 @@
-
 name: Python Tests
 
 on: [push, pull_request]
@@ -15,4 +14,4 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Run tests
-      run: pytest
+      run: python -m unittest discover -s tests
